[struts] Euh, tellement de choses... Grosse prise de tête avec Struts2 - La structure est surtout bientôt terminée, reste à écrire toutes les actions :(

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -4,3 +4,4 @@ global.footer.backtotop=Haut de page
 global.home=Accueil
 global.navbar.collapse-menu=Basculer la navigation
 global.navbar.pages=Pages
+global.hello=Bonjour
