[struts] Un peu de tout...

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -5,3 +5,10 @@ global.home=Accueil
 global.navbar.collapse-menu=Basculer la navigation
 global.navbar.pages=Pages
 global.hello=Bonjour
+global.login=Connexion
+global.login.userName=Identifiant
+global.login.password=Mot de passe
+global.logout=D\u00E9connexion
+global.login.identification=Identification
+global.login.already-signed-in=Vous \u00EAtes d\u00E9j\u00E0 connect\u00E9.
+global.search=Chercher
