--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -5,10 +5,13 @@ global.home=Accueil
 global.navbar.collapse-menu=Basculer la navigation
 global.navbar.pages=Pages
 global.hello=Bonjour
-global.login=Connexion
-global.login.userName=Identifiant
-global.login.password=Mot de passe
-global.logout=D\u00E9connexion
-global.login.identification=Identification
-global.login.already-signed-in=Vous \u00EAtes d\u00E9j\u00E0 connect\u00E9.
+login=Connexion
+login.userName=Identifiant
+login.password=Mot de passe
+logout=D\u00E9connexion
+login.identification=Identification
+login.already-signed-in=Vous \u00EAtes d\u00E9j\u00E0 connect\u00E9.
 global.search=Chercher
+login.validation.userName.null=L'identifiant ne peut pas \u00EAtre vide.
+login.validation.userName.wrong=Identifiant incorrect.
+login.validation.password.wrong=Mot de passe incorrect.
