[struts] [DAO] Correction d'une erreur dans insertInitValue. + Action des pages d'accueil user/admin.

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -5,6 +5,7 @@ global.home=Accueil
 global.navbar.collapse-menu=Basculer la navigation
 global.navbar.pages=Pages
 global.hello=Bonjour
+global.noQCM=Aucun QCM.
 login=Connexion
 login.userName=Identifiant
 login.password=Mot de passe
