[struts] Petites corrections, sur ton dernier commit Sullivan.

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -1,18 +1,18 @@
 global.about=\u00C0 propos
 global.appName=projetF-struts
 global.footer.backtotop=Haut de page
+global.hello=Bonjour
 global.home=Accueil
 global.navbar.collapse-menu=Basculer la navigation
 global.navbar.pages=Pages
-global.hello=Bonjour
-global.noQCM=Aucun QCM.
-login=Connexion
-login.userName=Identifiant
-login.password=Mot de passe
-logout=D\u00E9connexion
-login.identification=Identification
-login.already-signed-in=Vous \u00EAtes d\u00E9j\u00E0 connect\u00E9.
 global.search=Chercher
+listQCM.noQCM=Aucun QCM.
+login=Connexion
+login.already-signed-in=Vous \u00EAtes d\u00E9j\u00E0 connect\u00E9.
+login.identification=Identification
+login.password=Mot de passe
+login.userName=Identifiant
+login.validation.password.wrong=Mot de passe incorrect.
 login.validation.userName.null=L'identifiant ne peut pas \u00EAtre vide.
 login.validation.userName.wrong=Identifiant incorrect.
-login.validation.password.wrong=Mot de passe incorrect.
+logout=D\u00E9connexion
