[struts] Suppression d'un WARN

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -6,7 +6,7 @@ global.home=Accueil
 global.navbar.collapse-menu=Basculer la navigation
 global.navbar.pages=Pages
 global.search=Chercher
-listQCM.noQCM=Aucun QCM.
+user.listQCM.noQCM=Aucun QCM.
 login=Connexion
 login.already-signed-in=Vous \u00EAtes d\u00E9j\u00E0 connect\u00E9.
 login.identification=Identification
@@ -16,3 +16,4 @@ login.validation.password.wrong=Mot de passe incorrect.
 login.validation.userName.null=L'identifiant ne peut pas \u00EAtre vide.
 login.validation.userName.wrong=Identifiant incorrect.
 logout=D\u00E9connexion
+admin.listQCM.noQCM=Aucun QCM.
