[struts] Mise en forme de la liste des QCM user/admin.

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -17,3 +17,7 @@ login.validation.userName.null=L'identifiant ne peut pas \u00EAtre vide.
 login.validation.userName.wrong=Identifiant incorrect.
 logout=D\u00E9connexion
 admin.listQCM.noQCM=Aucun QCM.
+user.listQCM.participate=Participer.
+admin.listQCM.edit=Modifier.
+admin.listQCM.more=Plus.
+admin.listQCM.createOn=Cr\u00E9\u00E9 le
