[struts] Commit important ! - Définition des pages accessibles par type utilisateur.   (c-à-d le lien seulement). -> tiles/components/pages - Ajout d'une page addQCM.jsp et tout ce qui s'en suit. - Passage aux annotations (exception des actions "", "home", "*/home",   "error/*", "login", et "logout", le reste sera en annotation), pourquoi ?   Les annotations évitent un struts.xml trop grand, plus facile de faire du   refactoring, pour les exceptions c'est par facilité car ce sont des   actions un peu spéciales... - Accès à la session et au service simplifié, il est nécessaire de lire   ServiceAndSessionAwareAction.java pour comprendre !   Le code (par exemple) est grandement moins lourd et plus lisible pour   LoginAction.java - ModeleClient.java à lire, complémentaire du point précédent. - struts.enable.DynamicMethodInvocation à false (une action par classe).
[modele]
- Pas d'abstract dans une interface (enfin ça compile mais c'est inutile).

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -1,3 +1,7 @@
+admin.listQCM.createOn=Cr\u00E9\u00E9 le
+admin.listQCM.edit=Modifier.
+admin.listQCM.more=Plus.
+admin.listQCM.noQCM=Aucun QCM.
 global.about=\u00C0 propos
 global.appName=projetF-struts
 global.footer.backtotop=Haut de page
@@ -5,8 +9,10 @@ global.hello=Bonjour
 global.home=Accueil
 global.navbar.collapse-menu=Basculer la navigation
 global.navbar.pages=Pages
+global.pages.admin.addQCM=Ajouter un QCM
+global.pages.admin.listQCM=Liste des QCMs
+global.pages.user.listQCM=Liste des QCMs
 global.search=Chercher
-user.listQCM.noQCM=Aucun QCM.
 login=Connexion
 login.already-signed-in=Vous \u00EAtes d\u00E9j\u00E0 connect\u00E9.
 login.identification=Identification
@@ -16,8 +22,5 @@ login.validation.password.wrong=Mot de passe incorrect.
 login.validation.userName.null=L'identifiant ne peut pas \u00EAtre vide.
 login.validation.userName.wrong=Identifiant incorrect.
 logout=D\u00E9connexion
-admin.listQCM.noQCM=Aucun QCM.
+user.listQCM.noQCM=Aucun QCM.
 user.listQCM.participate=Participer.
-admin.listQCM.edit=Modifier.
-admin.listQCM.more=Plus.
-admin.listQCM.createOn=Cr\u00E9\u00E9 le
