[Struts] Page de question (user) + Action BeginQCM [DAO] [Modele] Abandon de java.sql.Date (deprecated)

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -24,3 +24,4 @@ login.validation.userName.wrong=Identifiant incorrect.
 logout=D\u00E9connexion
 user.listQCM.noQCM=Aucun QCM.
 user.listQCM.participate=Participer.
+global.validate=Valider.
