--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -25,3 +25,5 @@ logout=D\u00E9connexion
 user.listQCM.noQCM=Aucun QCM.
 user.listQCM.participate=Participer.
 global.validate=Valider.
+user.endQCM.finish=F\u00E9licitations, vous avez termin\u00E9 le QCM.
+user.endQCM.score=Votre score \:
