[Struts] Ajout et Suppression QCM. Suppresion QCM via AJAX. Ajout QCM renvoie vers la pages listQuestionQCM (permettra par la suite d'ajouter des questions).

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -27,3 +27,9 @@ user.listQCM.participate=Participer.
 global.validate=Valider.
 user.endQCM.finish=F\u00E9licitations, vous avez termin\u00E9 le QCM.
 user.endQCM.score=Votre score \:
+admin.listQCM.addQCM=Ajouter un QCM.
+admin.listQCM.nameQCM=Nom du QCM
+admin.listQCM.deleteQCM=Supprimer QCM.
+admin.listQCM.deleteQCMMessage=Voulez-vous vraiment supprimer ce QCM ?\
+L'ensemble des questions, r\u00E9ponses et r\u00E9sultats des utilisateurs concernant ce QCM seront \u00E9galement supprim\u00E9s.
+global.cancel=Annuler.
