--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -33,3 +33,6 @@ admin.listQCM.deleteQCM=Supprimer QCM.
 admin.listQCM.deleteQCMMessage=Voulez-vous vraiment supprimer ce QCM ?\
 L'ensemble des questions, r\u00E9ponses et r\u00E9sultats des utilisateurs concernant ce QCM seront \u00E9galement supprim\u00E9s.
 global.cancel=Annuler.
+admin.listQuestionQCM.addQuestion=Ajouter une question.
+admin.listQuestionQCM.editQuestion=Modifier cette question.
+admin.listQuestionQCM.multipleQuestion=Question multiple.
