[struts] Inspection + Sonar

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 admin.listQCM.createOn=Cr\u00E9\u00E9 le
 admin.listQCM.edit=Modifier
 admin.listQCM.more=Plus.
@@ -30,8 +31,7 @@ user.endQCM.score=Votre score \:
 admin.listQCM.addQCM=Ajouter un QCM
 admin.listQCM.nameQCM=Nom du QCM
 admin.listQCM.deleteQCM=Supprimer QCM.
-admin.listQCM.deleteQCMMessage=Voulez-vous vraiment supprimer ce QCM ?\
-L'ensemble des questions, r\u00E9ponses et r\u00E9sultats des utilisateurs concernant ce QCM seront \u00E9galement supprim\u00E9s.
+admin.listQCM.deleteQCMMessage=Voulez-vous vraiment supprimer ce QCM ? L'ensemble des questions, r\u00E9ponses et r\u00E9sultats des utilisateurs concernant ce QCM seront \u00E9galement supprim\u00E9s.
 global.cancel=Annuler.
 admin.listQuestionQCM.addQuestion=Ajouter une question.
 admin.listQuestionQCM.editQuestion=Modifier cette question.
