--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -36,3 +36,4 @@ global.cancel=Annuler.
 admin.listQuestionQCM.addQuestion=Ajouter une question.
 admin.listQuestionQCM.editQuestion=Modifier cette question.
 admin.listQuestionQCM.multipleQuestion=Question multiple.
+admin.listQuestionQCM.titleQuestionTable=Liste de questions.
