[Struts] [DAO] correction getFirstQuestion + getQuestionListByQCM.  + Page  ajout/modif/suppression question/réponse fonctionnel.

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -35,5 +35,11 @@ admin.listQCM.deleteQCMMessage=Voulez-vous vraiment supprimer ce QCM ? L'ensembl
 global.cancel=Annuler.
 admin.listQuestionQCM.addQuestion=Ajouter une question.
 admin.listQuestionQCM.editQuestion=Modifier cette question.
-admin.listQuestionQCM.multipleQuestion=Question multiple.
+admin.listQuestionQCM.multipleQuestion=Multiple
 admin.listQuestionQCM.titleQuestionTable=Liste de questions.
+admin.listQuestionQCM.intituleQuestion=Intitule
+admin.listQuestionQCM.dureeQuestion=Temps (s)
+admin.listQuestionQCM.pointQuestion=Point
+global.Yes=Oui
+global.No=Non
+admin.listQuestionQCM.correctReponse=Correct
