[Struts] Ajout de spinner dans la page listQuestionQCM.

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -43,3 +43,4 @@ admin.listQuestionQCM.pointQuestion=Point
 global.Yes=Oui
 global.No=Non
 admin.listQuestionQCM.correctReponse=Correct
+admin.listQuestionQCM.Reponses=R\u00E9ponses.
