[struts] Ajout de jQuery.validationEngine v2.6.2 en global - Correction d'un bug dans listQCM.jsp - layout.jsp réarrangé

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -1,10 +1,27 @@
 # suppress inspection "UnusedProperty" for whole file
+admin.listQCM.addQCM=Ajouter un QCM
+admin.listQCM.close=Fermer le QCM
 admin.listQCM.createOn=Cr\u00E9\u00E9 le
+admin.listQCM.deleteQCM=Supprimer QCM.
+admin.listQCM.deleteQCMMessage=Voulez-vous vraiment supprimer ce QCM ? L'ensemble des questions, r\u00E9ponses et r\u00E9sultats des utilisateurs concernant ce QCM seront \u00E9galement supprim\u00E9s.
 admin.listQCM.edit=Modifier
 admin.listQCM.more=Plus.
+admin.listQCM.nameQCM=Nom du QCM
 admin.listQCM.noQCM=Aucun QCM.
+admin.listQuestionQCM.Reponses=R\u00E9ponses.
+admin.listQuestionQCM.addQuestion=Ajouter une question.
+admin.listQuestionQCM.correctReponse=Correct
+admin.listQuestionQCM.dureeQuestion=Temps (s)
+admin.listQuestionQCM.editQuestion=Modifier cette question.
+admin.listQuestionQCM.intituleQuestion=Intitule
+admin.listQuestionQCM.multipleQuestion=Multiple
+admin.listQuestionQCM.pointQuestion=Point
+admin.listQuestionQCM.titleQuestionTable=Liste de questions.
+global.No=Non
+global.Yes=Oui
 global.about=\u00C0 propos
 global.appName=projetF-struts
+global.cancel=Annuler.
 global.footer.backtotop=Haut de page
 global.hello=Bonjour
 global.home=Accueil
@@ -14,6 +31,7 @@ global.pages.admin.addQCM=Ajouter un QCM
 global.pages.admin.listQCM=Liste des QCMs
 global.pages.user.listQCM=Liste des QCMs
 global.search=Chercher
+global.validate=Valider
 login=Connexion
 login.already-signed-in=Vous \u00EAtes d\u00E9j\u00E0 connect\u00E9.
 login.identification=Identification
@@ -23,24 +41,7 @@ login.validation.password.wrong=Mot de passe incorrect.
 login.validation.userName.null=L'identifiant ne peut pas \u00EAtre vide.
 login.validation.userName.wrong=Identifiant incorrect.
 logout=D\u00E9connexion
-user.listQCM.noQCM=Aucun QCM.
-user.listQCM.participate=Participer.
-global.validate=Valider
 user.endQCM.finish=F\u00E9licitations, vous avez termin\u00E9 le QCM.
 user.endQCM.score=Votre score \:
-admin.listQCM.addQCM=Ajouter un QCM
-admin.listQCM.nameQCM=Nom du QCM
-admin.listQCM.deleteQCM=Supprimer QCM.
-admin.listQCM.deleteQCMMessage=Voulez-vous vraiment supprimer ce QCM ? L'ensemble des questions, r\u00E9ponses et r\u00E9sultats des utilisateurs concernant ce QCM seront \u00E9galement supprim\u00E9s.
-global.cancel=Annuler.
-admin.listQuestionQCM.addQuestion=Ajouter une question.
-admin.listQuestionQCM.editQuestion=Modifier cette question.
-admin.listQuestionQCM.multipleQuestion=Multiple
-admin.listQuestionQCM.titleQuestionTable=Liste de questions.
-admin.listQuestionQCM.intituleQuestion=Intitule
-admin.listQuestionQCM.dureeQuestion=Temps (s)
-admin.listQuestionQCM.pointQuestion=Point
-global.Yes=Oui
-global.No=Non
-admin.listQuestionQCM.correctReponse=Correct
-admin.listQuestionQCM.Reponses=R\u00E9ponses.
+user.listQCM.noQCM=Aucun QCM.
+user.listQCM.participate=Participer.
