[Struts] Traduction oubliée dans listQuestionQCM.

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -13,6 +13,7 @@ admin.listQuestionQCM.addQuestion=Ajouter une question.
 admin.listQuestionQCM.correctReponse=Correct
 admin.listQuestionQCM.dureeQuestion=Temps (s)
 admin.listQuestionQCM.editQuestion=Modifier cette question.
+admin.listQuestionQCM.editReponses=Editer les r\u00E9ponses.
 admin.listQuestionQCM.intituleQuestion=Intitule
 admin.listQuestionQCM.multipleQuestion=Multiple
 admin.listQuestionQCM.pointQuestion=Point
