[Struts] [Modele] Modele implements  Serializable. + Début fonctionnalité page listUser.

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -18,6 +18,15 @@ admin.listQuestionQCM.intituleQuestion=Intitule
 admin.listQuestionQCM.multipleQuestion=Multiple
 admin.listQuestionQCM.pointQuestion=Point
 admin.listQuestionQCM.titleQuestionTable=Liste de questions.
+admin.listUser.entity=Entit\u00E9
+admin.listUser.firstName=Pr\u00E9nom
+admin.listUser.lastName=Nom
+admin.listUser.login=Identifiant
+admin.listUser.student=Etudiant
+admin.listUser.studentNumber=Num\u00E9ro \u00E9tudiant
+admin.listUser.teacher=Professeur
+admin.listUser.titleUserTable=Liste des utilisateurs.
+admin.listUser.userManagement=Gestion utilisateur.
 global.No=Non
 global.Yes=Oui
 global.about=\u00C0 propos
