[struts] Nettoyage navbar

--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -30,7 +30,7 @@ admin.listUser.userManagement=Gestion utilisateur.
 global.No=Non
 global.Yes=Oui
 global.about=\u00C0 propos
-global.appName=projetF-struts
+global.appName=projetF
 global.cancel=Annuler.
 global.footer.backtotop=Haut de page
 global.hello=Bonjour
