--- a/projetF-struts/src/main/resources/title_fr_FR.properties
+++ b/projetF-struts/src/main/resources/title_fr_FR.properties
@@ -1,3 +1,3 @@
 # suppress inspection "UnusedProperty" for whole file
 title.home=Accueil
-title.website=QCM (projetF-struts)
+title.website=QCM (projetF)
