[struts] M-à-j structure, i18n. - Bug global.properties (anglais) ne fonctionne qui si nommé   global_en_US.properties, contrairement à ce qu'indique la doc - Mise en place d'état de connexion dans le footer. - StatusQCMAction avance.
[swing]
- Correction dans Main

--- a/projetF-struts/src/main/resources/global_en_US.properties
+++ b/projetF-struts/src/main/resources/global_en_US.properties
@@ -6,7 +6,7 @@ admin.listQCM.deleteQCM=Delete QCM.
 admin.listQCM.deleteQCMMessage=Are you sure ?
 admin.listQCM.edit=Edit
 admin.listQCM.more=More.
-admin.listQCM.nameQCM=QCM's name
+admin.listQCM.nameQCM=QCM''s name
 admin.listQCM.noQCM=No QCM.
 admin.listQuestionQCM.Reponses=Answers.
 admin.listQuestionQCM.addQuestion=Add question.
@@ -38,8 +38,8 @@ global.home=Home
 global.navbar.collapse-menu=Toggle navigation
 global.navbar.pages=Pages
 global.pages.admin.addQCM=Add a MCQ
-global.pages.admin.listQCM=MCQ's List
-global.pages.user.listQCM=MCQ's List
+global.pages.admin.listQCM=MCQ''s List
+global.pages.user.listQCM=MCQ''s List
 global.search=Search
 global.validate=Validate
 login=Sign In
@@ -55,3 +55,5 @@ user.endQCM.finish=Congratulations, you have finished QCM.
 user.endQCM.score=Your score \:
 user.listQCM.noQCM=No QCM.
 user.listQCM.participate=Participate.
+global.footer.notconnected=You are not connected.
+global.footer.connectedas=Connected as
