--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -3,7 +3,7 @@ admin.listQCM.addQCM=Ajouter un QCM
 admin.listQCM.close=Fermer le QCM
 admin.listQCM.createOn=Cr\u00E9\u00E9 le
 admin.listQCM.deleteQCM=Supprimer QCM.
-admin.listQCM.deleteQCMMessage=Voulez-vous vraiment supprimer ce QCM ? L'ensemble des questions, r\u00E9ponses et r\u00E9sultats des utilisateurs concernant ce QCM seront \u00E9galement supprim\u00E9s.
+admin.listQCM.deleteQCMMessage=Voulez-vous vraiment supprimer ce QCM ? L''ensemble des questions, r\u00E9ponses et r\u00E9sultats des utilisateurs concernant ce QCM seront \u00E9galement supprim\u00E9s.
 admin.listQCM.edit=Modifier
 admin.listQCM.more=Plus.
 admin.listQCM.nameQCM=Nom du QCM
@@ -48,10 +48,12 @@ login.identification=Identification
 login.password=Mot de passe
 login.userName=Identifiant
 login.validation.password.wrong=Mot de passe incorrect.
-login.validation.userName.null=L'identifiant ne peut pas \u00EAtre vide.
+login.validation.userName.null=L''identifiant ne peut pas \u00EAtre vide.
 login.validation.userName.wrong=Identifiant incorrect.
 logout=D\u00E9connexion
 user.endQCM.finish=F\u00E9licitations, vous avez termin\u00E9 le QCM.
 user.endQCM.score=Votre score \:
 user.listQCM.noQCM=Aucun QCM.
 user.listQCM.participate=Participer.
+global.footer.notconnected=Vouz n''\u00EAtes pas connect\u00E9.
+global.footer.connectedas=Connect\u00E9 en tant qu''
