[struts] Système de traduction intègre maintenant des js selon la langue !

--- a/projetF-struts/src/main/resources/global_en_US.properties
+++ b/projetF-struts/src/main/resources/global_en_US.properties
@@ -1,7 +1,7 @@
 # suppress inspection "UnusedProperty" for whole file
 admin.listQCM.addQCM=Add an MCQ
 admin.listQCM.close=Close the MCQ
-admin.listQCM.createOn=Create on
+admin.listQCM.createOn=Created on
 admin.listQCM.deleteQCM=Delete QCM.
 admin.listQCM.deleteQCMMessage=Are you sure ?
 admin.listQCM.edit=Edit
