[struts] css .infoJTable pour un beau visuel. - Ajout de listUser au menu admin

--- a/projetF-struts/src/main/resources/global_en_US.properties
+++ b/projetF-struts/src/main/resources/global_en_US.properties
@@ -53,7 +53,8 @@ login.validation.password.wrong=Wrong password.
 login.validation.userName.null=The username can not be blank.
 login.validation.userName.wrong=Wrong username.
 logout=Sign Out
-user.endQCM.finish=Congratulations, you have finished QCM.
+user.endQCM.finish=Congratulations, you have finished MCQ.
 user.endQCM.score=Your score \:
-user.listQCM.noQCM=No QCM.
+user.listQCM.noQCM=No MCQ.
 user.listQCM.participate=Participate.
+global.pages.admin.listUser=User''s List
