--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -57,3 +57,4 @@ user.endQCM.finish=F\u00E9licitations, vous avez termin\u00E9 le QCM.
 user.endQCM.score=Votre score \:
 user.listQCM.noQCM=Aucun QCM.
 user.listQCM.participate=Participer.
+global.pages.admin.listUser=Liste des utilisateurs
