[DAO] [Struts] Ajout de la page listResultatUtilisateurQCM fontionnel.

--- a/projetF-struts/src/main/resources/global_en_US.properties
+++ b/projetF-struts/src/main/resources/global_en_US.properties
@@ -1,4 +1,3 @@
-# suppress inspection "UnusedProperty" for whole file
 admin.listQCM.addQCM=Add an MCQ
 admin.listQCM.close=Close the MCQ
 admin.listQCM.createOn=Created on
@@ -17,7 +16,11 @@ admin.listQuestionQCM.editReponses=Edit reponses.
 admin.listQuestionQCM.intituleQuestion=Name
 admin.listQuestionQCM.multipleQuestion=Multiple
 admin.listQuestionQCM.pointQuestion=Point
+admin.listQuestionQCM.showResult=Show users results.
 admin.listQuestionQCM.titleQuestionTable=Questions list.
+admin.listResultatUtilisateur.date=Date
+admin.listResultatUtilisateur.score=Score
+admin.listResultatUtilisateur.titleTable=Results users list (score max \:
 admin.listUser.entity=Entity
 admin.listUser.firstName=First name
 admin.listUser.lastName=Last name
@@ -41,6 +44,7 @@ global.navbar.collapse-menu=Toggle navigation
 global.navbar.pages=Pages
 global.pages.admin.addQCM=Add a MCQ
 global.pages.admin.listQCM=MCQ''s List
+global.pages.admin.listUser=User''s List
 global.pages.user.listQCM=MCQ''s List
 global.search=Search
 global.validate=Validate
@@ -57,4 +61,3 @@ user.endQCM.finish=Congratulations, you have finished MCQ.
 user.endQCM.score=Your score \:
 user.listQCM.noQCM=No MCQ.
 user.listQCM.participate=Participate.
-global.pages.admin.listUser=User''s List
