--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -1,4 +1,3 @@
-# suppress inspection "UnusedProperty" for whole file
 admin.listQCM.addQCM=Ajouter un QCM
 admin.listQCM.close=Fermer le QCM
 admin.listQCM.createOn=Cr\u00E9\u00E9 le
@@ -17,7 +16,11 @@ admin.listQuestionQCM.editReponses=Editer les r\u00E9ponses.
 admin.listQuestionQCM.intituleQuestion=Intitule
 admin.listQuestionQCM.multipleQuestion=Multiple
 admin.listQuestionQCM.pointQuestion=Point
+admin.listQuestionQCM.showResult=Voir les r\u00E9sultats des utilisateurs.
 admin.listQuestionQCM.titleQuestionTable=Liste de questions.
+admin.listResultatUtilisateur.date=Date
+admin.listResultatUtilisateur.score=Score
+admin.listResultatUtilisateur.titleTable=Liste des r\u00E9sultats utilisateurs (score max \:
 admin.listUser.entity=Entit\u00E9
 admin.listUser.firstName=Pr\u00E9nom
 admin.listUser.lastName=Nom
@@ -41,6 +44,7 @@ global.navbar.collapse-menu=Basculer la navigation
 global.navbar.pages=Pages
 global.pages.admin.addQCM=Ajouter un QCM
 global.pages.admin.listQCM=Liste des QCMs
+global.pages.admin.listUser=Liste des utilisateurs
 global.pages.user.listQCM=Liste des QCMs
 global.search=Chercher
 global.validate=Valider
@@ -57,4 +61,3 @@ user.endQCM.finish=F\u00E9licitations, vous avez termin\u00E9 le QCM.
 user.endQCM.score=Votre score \:
 user.listQCM.noQCM=Aucun QCM.
 user.listQCM.participate=Participer.
-global.pages.admin.listUser=Liste des utilisateurs
