[struts] Ajax pour changer le statut d'un QCM ok ! - Correction des classes DeleteQCM et StatusQCM vers un résultat JSON. - Suppression d'une définition inutile dans tiles.xml

--- a/projetF-struts/src/main/resources/global_en_US.properties
+++ b/projetF-struts/src/main/resources/global_en_US.properties
@@ -3,7 +3,6 @@ admin.listQCM.close=Close the MCQ
 admin.listQCM.createOn=Created on
 admin.listQCM.deleteQCM=Delete QCM.
 admin.listQCM.deleteQCMMessage=Are you sure ?
-admin.listQCM.edit=Edit
 admin.listQCM.more=More.
 admin.listQCM.nameQCM=QCM''s name
 admin.listQCM.noQCM=No QCM.
@@ -28,8 +27,8 @@ admin.listUser.login=Login
 admin.listUser.student=Student
 admin.listUser.studentNumber=Student number
 admin.listUser.teacher=Teacher
-admin.listUser.titleUserTable=Users list.
-admin.listUser.userManagement=User managgement.
+admin.listUser.titleUserTable=User''s list.
+admin.listUser.userManagement=User management.
 global.No=No
 global.Yes=Yes
 global.about=About
@@ -61,3 +60,5 @@ user.endQCM.finish=Congratulations, you have finished MCQ.
 user.endQCM.score=Your score \:
 user.listQCM.noQCM=No MCQ.
 user.listQCM.participate=Participate.
+admin.listQCM.open=Open the MCQ
+admin.listQCM.wait=Launch the MCQ starter
