--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -3,7 +3,6 @@ admin.listQCM.close=Fermer le QCM
 admin.listQCM.createOn=Cr\u00E9\u00E9 le
 admin.listQCM.deleteQCM=Supprimer QCM.
 admin.listQCM.deleteQCMMessage=Voulez-vous vraiment supprimer ce QCM ? L''ensemble des questions, r\u00E9ponses et r\u00E9sultats des utilisateurs concernant ce QCM seront \u00E9galement supprim\u00E9s.
-admin.listQCM.edit=Modifier
 admin.listQCM.more=Plus.
 admin.listQCM.nameQCM=Nom du QCM
 admin.listQCM.noQCM=Aucun QCM.
@@ -61,3 +60,5 @@ user.endQCM.finish=F\u00E9licitations, vous avez termin\u00E9 le QCM.
 user.endQCM.score=Votre score \:
 user.listQCM.noQCM=Aucun QCM.
 user.listQCM.participate=Participer.
+admin.listQCM.open=Ouvrir le QCM
+admin.listQCM.wait=Pr\u00E9-lancer le QCM
