[projet] Last code change !

--- a/projetF-struts/src/main/resources/global_en_US.properties
+++ b/projetF-struts/src/main/resources/global_en_US.properties
@@ -6,6 +6,8 @@ admin.listQCM.deleteQCMMessage=Are you sure ?
 admin.listQCM.more=More.
 admin.listQCM.nameQCM=QCM''s name
 admin.listQCM.noQCM=No QCM.
+admin.listQCM.open=Open the MCQ
+admin.listQCM.wait=Launch the MCQ starter
 admin.listQuestionQCM.Reponses=Answers.
 admin.listQuestionQCM.addQuestion=Add question.
 admin.listQuestionQCM.correctReponse=Correct
@@ -32,12 +34,15 @@ admin.listUser.userManagement=User management.
 global.No=No
 global.Yes=Yes
 global.about=About
+global.admin=Administrator
 global.appName=projetF
 global.cancel=Cancel.
+global.credit=by \u00C9l\u00E9onore G, Alexis L. and Sullivan P.
+global.demonstrate=We''re about to begin the demonstration
 global.footer.backtotop=Back to top
 global.footer.connectedas=Connected as
 global.footer.notconnected=You are not connected.
-global.hello=Hello
+global.hello=Welcome \!
 global.home=Home
 global.navbar.collapse-menu=Toggle navigation
 global.navbar.pages=Pages
@@ -46,6 +51,7 @@ global.pages.admin.listQCM=MCQ''s List
 global.pages.admin.listUser=User''s List
 global.pages.user.listQCM=MCQ''s List
 global.search=Search
+global.student=Student
 global.validate=Validate
 login=Sign In
 login.already-signed-in=You have already signed in.
@@ -60,5 +66,3 @@ user.endQCM.finish=Congratulations, you have finished MCQ.
 user.endQCM.score=Your score \:
 user.listQCM.noQCM=No MCQ.
 user.listQCM.participate=Participate.
-admin.listQCM.open=Open the MCQ
-admin.listQCM.wait=Launch the MCQ starter
