--- a/projetF-struts/src/main/resources/global_fr_FR.properties
+++ b/projetF-struts/src/main/resources/global_fr_FR.properties
@@ -6,6 +6,8 @@ admin.listQCM.deleteQCMMessage=Voulez-vous vraiment supprimer ce QCM ? L''ensemb
 admin.listQCM.more=Plus.
 admin.listQCM.nameQCM=Nom du QCM
 admin.listQCM.noQCM=Aucun QCM.
+admin.listQCM.open=Ouvrir le QCM
+admin.listQCM.wait=Pr\u00E9-lancer le QCM
 admin.listQuestionQCM.Reponses=R\u00E9ponses.
 admin.listQuestionQCM.addQuestion=Ajouter une question.
 admin.listQuestionQCM.correctReponse=Correct
@@ -32,12 +34,15 @@ admin.listUser.userManagement=Gestion utilisateur.
 global.No=Non
 global.Yes=Oui
 global.about=\u00C0 propos
+global.admin=Administrateur
 global.appName=projetF
 global.cancel=Annuler.
+global.credit=par \u00C9l\u00E9onore G, Alexis L. et Sullivan P.
+global.demonstrate=Vous allez assister \u00E0 une d\u00E9monstration
 global.footer.backtotop=Haut de page
 global.footer.connectedas=Connect\u00E9 en tant qu''
 global.footer.notconnected=Vouz n''\u00EAtes pas connect\u00E9.
-global.hello=Bonjour
+global.hello=Bienvenue \!
 global.home=Accueil
 global.navbar.collapse-menu=Basculer la navigation
 global.navbar.pages=Pages
@@ -46,6 +51,7 @@ global.pages.admin.listQCM=Liste des QCMs
 global.pages.admin.listUser=Liste des utilisateurs
 global.pages.user.listQCM=Liste des QCMs
 global.search=Chercher
+global.student=\u00C9tudiant
 global.validate=Valider
 login=Connexion
 login.already-signed-in=Vous \u00EAtes d\u00E9j\u00E0 connect\u00E9.
@@ -60,5 +66,3 @@ user.endQCM.finish=F\u00E9licitations, vous avez termin\u00E9 le QCM.
 user.endQCM.score=Votre score \:
 user.listQCM.noQCM=Aucun QCM.
 user.listQCM.participate=Participer.
-admin.listQCM.open=Ouvrir le QCM
-admin.listQCM.wait=Pr\u00E9-lancer le QCM
